--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uxd-cpi"
-version = "7.0.7"
+version = "7.0.9"
 authors = [
   "acammm <alexcamill@gmail.com>",
   "cnek <ctk2012ac@gmail.com>",
@@ -22,5 +22,5 @@ development = []
 
 [dependencies]
 anchor-gen = "0.3.1"
-anchor-lang = ">=0.20"
+anchor-lang = "0.26.0"
 borsh = { version = "0.9", features = ["const-generics"] }
