--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,4 +25,4 @@ anchor-gen = "0.3.1"
 anchor-lang = "0.26.0"
 
 solana-program = "=1.14.17"
-borsh = { features = ["const-generics"] }
+borsh = { version = "0.9", features = ["const-generics"] }
