[Update] 7.3.1 - Updated credix rebalance IX naming (#4)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uxd-cpi"
-version = "7.1.0"
+version = "7.3.1"
 authors = [
   "acammm <alexcamill@gmail.com>",
   "cnek <ctk2012ac@gmail.com>",
@@ -23,4 +23,6 @@ development = []
 [dependencies]
 anchor-gen = "0.3.1"
 anchor-lang = "0.26.0"
+
+solana-program = "=1.14.17"
 borsh = { version = "0.9", features = ["const-generics"] }
