--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ development = []
 
 [dependencies]
 anchor-gen = "0.3.1"
-anchor-lang = "0.26.0"
+anchor-lang = "^0.27.0"
 
 solana-program = "=1.14.17"
 borsh = { version = "0.9", features = ["const-generics"] }
